[package]
name = "api-health-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
env_logger = "0.11.10"
log = "0.4.32"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
