[package]
name = "api-health-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
thiserror = "1.0"
chrono = "0.4.45"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
# Métricas e Prometheus
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
# Servidor para expor métricas (Axum é leve e moderno)
axum = "0.8.1"

[dev-dependencies]
wiremock = "0.6.5"
